--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -14,5 +14,6 @@
         <p>I enjoy drawing and anything artistic, which is the main reason I chose <abbr title="Interactive Media Design">IMD</abbr> as my college course. I also ended up realizing that I <em>really</em> enjoyed programming through my high school computer courses. Something else I enjoy are video games, with puzzle games, and story-driven games being some of my favourite types. My favourites are Minecraft, Genshin Impact, Hiveswap, Deltarune, and Broken Age. </p>
         <blockquote>"You aren't doing it wrong if no one knows what you're doing" <cite>-Unknown</cite></blockquote>
     </article>
+    <footer>Copyright 2023&copy;</footer>
 </body>
 </html>
