--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -7,7 +7,7 @@
     <title>HTML Assignment - Dyck0026</title>
 </head>
 <body>
-    <h1>Stephanie Dyck</h1>
+    <header><h1>Stephanie Dyck</h1></header>
     <article>
         <h2>About Me</h2>
         <p>My name is Stephanie Elizabeth Dyck, I have two parents, one sister, one cat, and three gerbils. I am eighteen years old, blonde, blue-eyed, and have almost entirely German ancestry <sup>(with some Irish thrown in, as though I wasn't pale enough already)</sup>. I am extremely introverted, and like hiding in my dark <abbr title="Cave">bedroom</abbr>. I have ADHD, and am mostly blind in one eye. </p>
