Adds list and list items

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -13,6 +13,15 @@
         <h2>About Me</h2>
         <p>My name is Stephanie Elizabeth Dyck, I have two parents, one sister, one cat, and three gerbils. I am eighteen years old, blonde, blue-eyed, and have almost entirely German ancestry <sup>(with some Irish thrown in, as though I wasn't pale enough already)</sup>. I am extremely introverted, and like hiding in my dark <abbr title="Cave">bedroom</abbr>. I have ADHD, and am mostly blind in one eye. </p>
         <p>I enjoy drawing and anything artistic, which is the main reason I chose <abbr title="Interactive Media Design">IMD</abbr> as my college course. I also ended up realizing that I <em>really</em> enjoyed programming through my high school computer courses. Something else I enjoy are video games, with puzzle games, and story-driven games being some of my favourite types. My favourites are Minecraft, Genshin Impact, Hiveswap, Deltarune, and Broken Age. </p>
+        <article>
+            <h3>My Hobbies:</h3>
+            <ul>
+                <li>Video Games</li>
+                <li>Drawing</li>
+                <li>Harassing my cat</li>
+                <li>Reading Online</li>
+            </ul>
+        </article>
         <blockquote>"You aren't doing it wrong if no one knows what you're doing" <cite>-Unknown</cite></blockquote>
     </article>
     <footer>Copyright 2023&copy;</footer>
