Adds description list to notes.html

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -8,5 +8,17 @@
 </head>
 <body>
     <heading><h1>Notes</h1></heading>
+    <dl>
+        <dt>&lt;div&gt;</dt>
+        <dd>div tags are generic tags used for any kind of content</dd>
+        <dt>&lt;img&gt;</dt>
+        <dd>image tags are used to embed images into your site</dd>
+        <dt>&lt;a&gt;</dt>
+        <dd>anchor tags are how you embed links</dd>
+        <dt>&lt;article&gt;</dt>
+        <dd>article tags are for unrelated content</dd>
+        <dt>&lt;section&gt;</dt>
+        <dd>section tags are used for content with a heading</dd>
+    </dl>
 </body>
 </html>
