Adds navigation to index.html

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -23,6 +23,7 @@
             </ul>
         </article>
         <blockquote>"You aren't doing it wrong if no one knows what you're doing" <cite>-Unknown</cite></blockquote>
+        <nav><a href="notes.html" target="_blank">Notes</a></nav>
     </article>
     <footer>Copyright 2023&copy;</footer>
 </body>
