Fixes heading name error

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -7,7 +7,7 @@
     <title>Simple HTML Assignment - Dyck0026</title>
 </head>
 <body>
-    <heading><h1>Notes</h1></heading>
+    <header><h1>Notes</h1></header>
     <dl>
         <dt>&lt;div&gt;</dt>
         <dd>div tags are generic tags used for any kind of content</dd>
