Removes link target from index and notes

--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -20,7 +20,7 @@
         <dt>&lt;section&gt;</dt>
         <dd>section tags are used for content with a heading</dd>
     </dl>
-    <nav><a href="index.html" target="_blank">Home</a></nav>
+    <nav><a href="index.html">Home</a></nav>
     <footer>Copyright 2023&copy;</footer>
 </body>
 </html>
