changes nav location, changes copyright, edits styling

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="wrapper">
-        <header><h1>Stephanie Dyck</h1></header>
+        <header>
+            <h1>Stephanie Dyck</h1>
+            <nav><a href="notes.html">Notes</a></nav>
+        </header>
         <img width="500" height="500" src="images/stephanie-dyck-photo.jpg" alt="A photo of Stephanie Dyck" title="Stephanie Dyck">
         <article>
             <h2>About Me</h2>
@@ -25,9 +28,9 @@
                 </ul>
             </article>
             <blockquote>"You aren't doing it wrong if no one knows what you're doing" <cite>-Unknown</cite></blockquote>
-            <nav><a href="notes.html">Notes</a></nav>
+            
         </article>
-        <footer>Copyright 2023&copy;</footer>
+        <footer>&copy;Copyright 2023</footer>
     </div>
 </body>
 </html>
