--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -8,20 +8,26 @@
     <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-    <header><h1>Notes</h1></header>
-    <dl>
-        <dt>&lt;div&gt;</dt>
-        <dd>div tags are generic tags used for any kind of content</dd>
-        <dt>&lt;img&gt;</dt>
-        <dd>image tags are used to embed images into your site</dd>
-        <dt>&lt;a&gt;</dt>
-        <dd>anchor tags are how you embed links</dd>
-        <dt>&lt;article&gt;</dt>
-        <dd>article tags are for unrelated content</dd>
-        <dt>&lt;section&gt;</dt>
-        <dd>section tags are used for content with a heading</dd>
-    </dl>
-    <nav><a href="index.html">Home</a></nav>
-    <footer>Copyright 2023&copy;</footer>
+    <div class="wrapper">
+        <header>
+            <h1>Notes</h1>
+            <nav><a href="index.html">Home</a></nav>
+        </header>
+        <article>
+            <dl>
+                <dt>&lt;div&gt;</dt>
+                <dd>div tags are generic tags used for any kind of content</dd>
+                <dt>&lt;img&gt;</dt>
+                <dd>image tags are used to embed images into your site</dd>
+                <dt>&lt;a&gt;</dt>
+                <dd>anchor tags are how you embed links</dd>
+                <dt>&lt;article&gt;</dt>
+                <dd>article tags are for unrelated content</dd>
+                <dt>&lt;section&gt;</dt>
+                <dd>section tags are used for content with a heading</dd>
+            </dl>
+        </article>
+        <footer>&copy;Copyright 2023</footer>
+    </div>
 </body>
 </html>
