adds class and changes header color

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>Stephanie Dyck</h1>
+            <h1 class="site-title">Stephanie Dyck</h1>
             <nav><a href="notes.html">Notes</a></nav>
         </header>
         <img width="500" height="500" src="images/stephanie-dyck-photo.jpg" alt="A photo of Stephanie Dyck" title="Stephanie Dyck">
