adds box shadow, squares, and nth child

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -13,7 +13,7 @@
             <h1 class="site-title">Stephanie Dyck</h1>
             <nav><a href="notes.html">Notes</a></nav>
         </header>
-        <img width="500" height="500" src="images/stephanie-dyck-photo.jpg" alt="A photo of Stephanie Dyck" title="Stephanie Dyck">
+        <img width="500" height="500" src="images/stephanie-dyck-photo.jpg" alt="A photo of Stephanie Dyck" title="Stephanie Dyck" id="my-image">
         <article>
             <h2>About Me</h2>
             <p>My name is Stephanie Elizabeth Dyck, I have two parents, one sister, one cat, and three gerbils. I am eighteen years old, blonde, blue-eyed, and have almost entirely German ancestry <sup>(with some Irish thrown in, as though I wasn't pale enough already)</sup>. I am extremely introverted, and like hiding in my dark <abbr title="Cave">bedroom</abbr>. I have ADHD, and am mostly blind in one eye. </p>
