--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -14,6 +14,7 @@
             <nav><a href="index.html">Home</a></nav>
         </header>
         <article>
+            <h2>Tags</h2>
             <dl>
                 <dt>&lt;div&gt;</dt>
                 <dd>div tags are generic tags used for any kind of content</dd>
