Adds html commenting

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -7,6 +7,13 @@
     <title>Stephanie Midterm</title>
     <link href="css/main.css" rel="stylesheet">
 </head>
+    <!-- tags gathered at top to allow proper indentation-->
+    <!-- div with wrapper tag to center the content -->
+    <!-- header with text overtop of an image -->
+    <!-- nav bar with links side-by-side  -->
+    <!-- article with header, image, and text wrap  -->
+    <!-- actual starfish facts as a nice surprise -->
+    <!-- section used for contact form  -->
 <body>
     
 </body>
