--- a/midterm/index.html
+++ b/midterm/index.html
@@ -15,6 +15,24 @@
     <!-- actual starfish facts as a nice surprise -->
     <!-- section used for contact form  -->
 <body>
-    
+    <div class="wrapper">
+        <header>
+            <img src="images/lone-starfish-wide.jpg" alt="A lonely starfish sitting in sand" title="The Lone Starfish">
+            <h1>Lone Starfish</h1>
+            <nav>
+                <a href="#home">Home</a>
+                <a href="#placeholder">Story</a>
+                <a href="#placeholder">Contact</a>
+            </nav>
+        </header>
+        <article>
+            <h2 id="home">Life of a Starfish</h2>
+            <img src="images/lone-starfish.jpg" alt="A smaller picture of the same lonely starfish" title="The Lone Starfish v.2">
+            <p>Yellowfin surgeonfish: sandfish pearl danio trout cod Black prickleback piranha Quillfish duckbill eel olive flounder, tuna. Rabbitfish halibut Atlantic eel long-finned pike snipefish, Black prickleback, zebra bullhead shark sandbar shark southern Dolly Varden. Gurnard dogteeth tetra peamouth, devil ray channel catfish, wolffish. Kelpfish New Zealand sand diver orange roughy basslet silver hake dwarf loach Australasian salmon Manta Ray. Stingray whitefish parasitic catfish ling pencilsmelt squaretail anchovy Moses sole: loweye catfish hoki nurseryfish weasel shark convict blenny Queen triggerfish viperfish trench lightfish flying gurnard candlefish; Atlantic cod North American freshwater catfish four-eyed fish zebra lionfish worm eel. Northern sea robin ocean perch armorhead catfish fusilier fish South American Lungfish basslet South American Lungfish, “Red salmon, angler catfish.” Hatchetfish blue eye pirarucu Death Valley pupfish Bombay duck bream. Russian sturgeon mora, river shark. Quillfish sailback scorpionfish, frilled shark Pacific herring platyfish shovelnose sturgeon tenuis shiner snapper kanyu Bengal danio smalltooth sawfish hake poacher goby. Inconnu walu, carpetshark, longnose dace sea dragon snubnose eel mahseer bullhead triggerfish Black triggerfish. Gray reef shark armorhead, Death Valley pupfish, barbelless catfish nibbler?</p>
+        </article>
+        <article>
+            <h2 id="story">Facts About Starfish</h2>
+        </article>
+    </div>
 </body>
 </html>
