Adds list items

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -32,6 +32,12 @@
         </article>
         <article>
             <h2 id="story">Facts About Starfish</h2>
+            <ul>
+                <li>Starfish can re-grow lost limbs</li>
+                <li>Starfish are brainless in the most literal sense</li>
+                <li>Starfish have hundreds of creepy little feet</li>
+                <li>Starfish push their stomachs outside of their body to eat large prey</li>
+            </ul>
         </article>
     </div>
 </body>
