adds form and footer

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -30,7 +30,7 @@
             <img src="images/lone-starfish.jpg" alt="A smaller picture of the same lonely starfish" title="The Lone Starfish v.2">
             <p>Yellowfin surgeonfish: sandfish pearl danio trout cod Black prickleback piranha Quillfish duckbill eel olive flounder, tuna. Rabbitfish halibut Atlantic eel long-finned pike snipefish, Black prickleback, zebra bullhead shark sandbar shark southern Dolly Varden. Gurnard dogteeth tetra peamouth, devil ray channel catfish, wolffish. Kelpfish New Zealand sand diver orange roughy basslet silver hake dwarf loach Australasian salmon Manta Ray. Stingray whitefish parasitic catfish ling pencilsmelt squaretail anchovy Moses sole: loweye catfish hoki nurseryfish weasel shark convict blenny Queen triggerfish viperfish trench lightfish flying gurnard candlefish; Atlantic cod North American freshwater catfish four-eyed fish zebra lionfish worm eel. Northern sea robin ocean perch armorhead catfish fusilier fish South American Lungfish basslet South American Lungfish, “Red salmon, angler catfish.” Hatchetfish blue eye pirarucu Death Valley pupfish Bombay duck bream. Russian sturgeon mora, river shark. Quillfish sailback scorpionfish, frilled shark Pacific herring platyfish shovelnose sturgeon tenuis shiner snapper kanyu Bengal danio smalltooth sawfish hake poacher goby. Inconnu walu, carpetshark, longnose dace sea dragon snubnose eel mahseer bullhead triggerfish Black triggerfish. Gray reef shark armorhead, Death Valley pupfish, barbelless catfish nibbler?</p>
         </article>
-        <article>
+        <section>
             <h2 id="story">Facts About Starfish</h2>
             <ul>
                 <li>Starfish can re-grow lost limbs</li>
@@ -38,7 +38,30 @@
                 <li>Starfish have hundreds of creepy little feet</li>
                 <li>Starfish push their stomachs outside of their body to eat large prey</li>
             </ul>
-        </article>
+        </section>
+        <aside>
+            <h2>Contact to learn more</h2>
+            <div class="border">
+                <form action="placeholder.file" method="post">
+                    <label for="Your Name">Your Name</label>
+                    <input id="Your Name" type="text" name="your name">
+                    <label for="Your Email">Your Email</label>
+                    <input id="Your Email" type="text" name="your email">
+                    <label for="Your Message">Your Message</label>
+                    <textarea id="Your Message"></textarea>
+                    <label>Would you like to visit the starfish?</label>
+                    <label for="Yes">Yes</label>
+                    <input id="Yes" type="radio" name="yes">
+                    <label for="No">No</label>
+                    <input id="No" type="radio" name="no">
+                    <label for="Maybe">Maybe</label>
+                    <input id="Maybe" type="radio" name="maybe">
+                    <label for=""></label>
+                    <button type="submit">SEND</button>
+                </form>
+            </div>
+        </aside>
+        <footer>&copy; Lone Starfish.</footer>
     </div>
 </body>
 </html>
