--- a/midterm/index.html
+++ b/midterm/index.html
@@ -21,8 +21,8 @@
             <h1>Lone Starfish</h1>
             <nav>
                 <a href="#home">Home</a>
-                <a href="#placeholder">Story</a>
-                <a href="#placeholder">Contact</a>
+                <a href="#story">Story</a>
+                <a href="#contact">Contact</a>
             </nav>
         </header>
         <article>
@@ -40,7 +40,7 @@
             </ul>
         </section>
         <aside>
-            <h2>Contact to learn more</h2>
+            <h2 id="contact">Contact to learn more</h2>
             <div class="border">
                 <form action="placeholder.file" method="post">
                     <label for="Your Name">Your Name</label>
