Adds comments in correct places

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -7,30 +7,28 @@
     <title>Stephanie Midterm</title>
     <link href="css/main.css" rel="stylesheet">
 </head>
-    <!-- tags gathered at top to allow proper indentation-->
-    <!-- div with wrapper tag to center the content -->
-    <!-- header with text overtop of an image -->
-    <!-- nav bar with links side-by-side  -->
-    <!-- article with header, image, and text wrap  -->
-    <!-- actual starfish facts as a nice surprise -->
-    <!-- section used for contact form  -->
 <body>
+    <!-- div with wrapper tag to center the content -->
     <div class="wrapper">
+        <!-- header with text overtop of an image -->
         <header>
             <img src="images/lone-starfish-wide.jpg" alt="A lonely starfish sitting in sand" title="The Lone Starfish">
             <h1>Lone Starfish</h1>
+            <!-- nav bar with links side-by-side  -->
             <nav>
                 <a href="#home">Home</a>
                 <a href="#story">Story</a>
                 <a href="#contact">Contact</a>
             </nav>
         </header>
+        <!-- article with header, image, and text wrap  -->
         <article>
             <h2 id="home">Life of a Starfish</h2>
             <img src="images/lone-starfish.jpg" alt="A smaller picture of the same lonely starfish" title="The Lone Starfish v.2">
             <p>Yellowfin surgeonfish: sandfish pearl danio trout cod Black prickleback piranha Quillfish duckbill eel olive flounder, tuna. Rabbitfish halibut Atlantic eel long-finned pike snipefish, Black prickleback, zebra bullhead shark sandbar shark southern Dolly Varden. Gurnard dogteeth tetra peamouth, devil ray channel catfish, wolffish. Kelpfish New Zealand sand diver orange roughy basslet silver hake dwarf loach Australasian salmon Manta Ray. Stingray whitefish parasitic catfish ling pencilsmelt squaretail anchovy Moses sole: loweye catfish hoki nurseryfish weasel shark convict blenny Queen triggerfish viperfish trench lightfish flying gurnard candlefish; Atlantic cod North American freshwater catfish four-eyed fish zebra lionfish worm eel. Northern sea robin ocean perch armorhead catfish fusilier fish South American Lungfish basslet South American Lungfish, “Red salmon, angler catfish.” Hatchetfish blue eye pirarucu Death Valley pupfish Bombay duck bream. Russian sturgeon mora, river shark. Quillfish sailback scorpionfish, frilled shark Pacific herring platyfish shovelnose sturgeon tenuis shiner snapper kanyu Bengal danio smalltooth sawfish hake poacher goby. Inconnu walu, carpetshark, longnose dace sea dragon snubnose eel mahseer bullhead triggerfish Black triggerfish. Gray reef shark armorhead, Death Valley pupfish, barbelless catfish nibbler?</p>
         </article>
         <section>
+            <!-- actual starfish facts as a nice surprise -->
             <h2 id="story">Facts About Starfish</h2>
             <ul>
                 <li>Starfish can re-grow lost limbs</li>
@@ -41,6 +39,7 @@
         </section>
         <aside>
             <h2 id="contact">Contact to learn more</h2>
+            <!--div with a class to add a border around the form-->
             <div class="border">
                 <form action="placeholder.file" method="post">
                     <label for="Your Name">Your Name</label>
