--- a/midterm/index.html
+++ b/midterm/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <!-- header with text overtop of an image -->
         <header>
-            <img src="images/lone-starfish-wide.jpg" alt="A lonely starfish sitting in sand" title="The Lone Starfish">
+            <img src="images/lone-starfish-wide.jpg" alt="A lonely starfish sitting in sand" title="The Lone Starfish" id="ls1">
             <h1>Lone Starfish</h1>
             <!-- nav bar with links side-by-side  -->
             <nav>
