--- a/midterm/index.html
+++ b/midterm/index.html
@@ -17,7 +17,7 @@
             <!-- nav bar with links side-by-side  -->
             <nav>
                 <a href="#home">Home</a>
-                <a href="#story">Story</a>
+                <a href="#story" class="middle">Story</a>
                 <a href="#contact">Contact</a>
             </nav>
         </header>
