--- a/midterm/index.html
+++ b/midterm/index.html
@@ -45,24 +45,23 @@
                 <div class="border">
                     <form action="placeholder.file" method="post">
                         <label for="Your Name">Your Name</label>
-                        <input id="Your Name" type="text" name="your name">
+                        <input id="Your Name" type="text" name="your name" class="long">
                         <label for="Your Email">Your Email</label>
-                        <input id="Your Email" type="text" name="your email">
+                        <input id="Your Email" type="text" name="your email" class="long">
                         <label for="Your Message">Your Message</label>
                         <textarea id="Your Message"></textarea>
-                        <label>Would you like to visit the starfish?</label>
+                        <label>Would you like to visit the starfish?<br></label>
                         <label for="Yes">Yes</label>
                         <input id="Yes" type="radio" name="yes">
                         <label for="No">No</label>
                         <input id="No" type="radio" name="no">
                         <label for="Maybe">Maybe</label>
-                        <input id="Maybe" type="radio" name="maybe">
-                        <label for=""></label>
+                        <input id="Maybe" type="radio" name="maybe"><br>
                         <button type="submit">SEND</button>
                     </form>
                 </div>
             </aside>
-            <footer>&copy; Lone Starfish.</footer>
+            <footer><p>&copy; Lone Starfish.</p></footer>
         </div>
     </div>
 </body>
