fixes the last few errors

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -44,19 +44,19 @@
                 <!--div with a class to add a border around the form-->
                 <div class="border">
                     <form action="placeholder.file" method="post">
-                        <label for="Your Name">Your Name</label>
-                        <input id="Your Name" type="text" name="your name" class="long">
-                        <label for="Your Email">Your Email</label>
-                        <input id="Your Email" type="text" name="your email" class="long">
-                        <label for="Your Message">Your Message</label>
-                        <textarea id="Your Message"></textarea>
+                        <label for="your_name">Your Name</label>
+                        <input id="your_name" type="text" name="your_name" class="long">
+                        <label for="your_email">Your Email</label>
+                        <input id="your_email" type="text" name="your_email" class="long">
+                        <label for="your_message">Your Message</label>
+                        <textarea id="your_message"></textarea>
                         <label>Would you like to visit the starfish?<br></label>
-                        <label for="Yes">Yes</label>
-                        <input id="Yes" type="radio" name="yes">
-                        <label for="No">No</label>
-                        <input id="No" type="radio" name="no">
-                        <label for="Maybe">Maybe</label>
-                        <input id="Maybe" type="radio" name="maybe"><br>
+                        <label for="yes">Yes</label>
+                        <input id="yes" type="radio" name="yes">
+                        <label for="no">No</label>
+                        <input id="no" type="radio" name="no">
+                        <label for="maybe">Maybe</label>
+                        <input id="maybe" type="radio" name="maybe"><br>
                         <button type="submit">SEND</button>
                     </form>
                 </div>
