fixes radio buttons and removes button background

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -52,12 +52,12 @@
                         <textarea id="your_message"></textarea>
                         <label>Would you like to visit the starfish?<br></label>
                         <label for="yes">Yes</label>
-                        <input id="yes" type="radio" name="yes">
+                        <input type="radio" id="yes" name="starfish" value="yes">
                         <label for="no">No</label>
-                        <input id="no" type="radio" name="no">
+                        <input type="radio" id="no" name="starfish" value="no">
                         <label for="maybe">Maybe</label>
-                        <input id="maybe" type="radio" name="maybe"><br>
-                        <button type="submit">SEND</button>
+                        <input type="radio" id="maybe" name="starfish" value="maybe">
+                        <br><button type="submit">SEND</button>
                     </form>
                 </div>
             </aside>
