Starts the commenting

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>final-project</title>
+    <link rel="stylesheet" href="CSS/main.css">
 </head>
 <body>
-    
+    <!-- main wrapper to center content -->
+    <div class="wrapper">
+        <!-- header with logo, nav, and search (mobile: vertical, desktop: horizontal) -->
+
+        
+    </div>
 </body>
 </html>
