Adds format commenting

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -12,6 +12,14 @@
     <div class="wrapper">
         <!-- header with logo, nav, and search (mobile: vertical, desktop: horizontal) -->
 
+        <!-- going to have to use a parent element for the photo and text on top -->
+
+        <!-- russian nesting divs for bleed effect on desktop (link to about) -->
+
+        <!-- needs parent for grid format, with SIX columns (link to services) -->
+
+        <!-- russian nesting divs take two -->
+
         
     </div>
 </body>
