Adds begining of html skeleton

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -11,16 +11,47 @@
     <!-- main wrapper to center content -->
     <div class="wrapper">
         <!-- header with logo, nav, and search (mobile: vertical, desktop: horizontal) -->
+        <header>
+            <img src="" alt="">
+            <nav>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+            </nav>
+            <form action=""></form>
+        </header>
 
         <!-- going to have to use a parent element for the photo and text on top -->
-
-        <!-- russian nesting divs for bleed effect on desktop (link to about) -->
-
+        <div class="flt1">
+            <img src="" alt="">
+            <div class="fltbox">
+                <h1></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eligendi beatae sed cum, cupiditate veniam facere voluptate, nihil excepturi, mollitia magni aliquid distinctio tenetur temporibus amet! Necessitatibus facilis iure magnam!</p>
+                <div class="fltbttn"> <a href=""></a> </div>
+            </div>
+            
+        </div>
+    </div>
+    <!-- russian nesting divs for bleed effect on desktop (link to about) -->
+    <div class="about">
+        <div class="wrapper">
+            <img src="" alt="">
+            <h2></h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorum quis inventore ducimus iusto laboriosam voluptates aspernatur, eveniet, pariatur et eum tenetur excepturi possimus doloribus. Dolor, magni. Quae, nobis beatae!</p>
+            <p>Odit neque libero illum expedita provident velit accusamus autem error hic quaerat soluta, similique cupiditate quasi recusandae minus! Accusamus officiis sapiente veniam itaque rerum repellat eaque quaerat non dicta deleniti?</p>
+        </div>
+    </div>
         <!-- needs parent for grid format, with SIX columns (link to services) -->
 
         <!-- russian nesting divs take two -->
 
-        
-    </div>
+        <!-- needs a parent for flex, and order the second image to the end (link to team) -->
+
+        <!-- form, map, and hours of operation (changes position for desktop, maybe float?) (link to contact) -->
+
+        <!-- footer needs unsplash link -->
+
 </body>
 </html>
