Adds content to services

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -46,8 +46,8 @@
     <!-- russian nesting divs for bleed effect on desktop (link to about) -->
     <div class="about" id="about-us">
         <div class="wrapper">
-            <img src="" alt="">
-            <h2></h2>
+            <img src="images/about-us.jpg" alt="ping-pong table in a lounge">
+            <h2>About Us</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum dolorum quis inventore ducimus iusto laboriosam voluptates aspernatur, eveniet, pariatur et eum tenetur excepturi possimus doloribus. Dolor, magni. Quae, nobis beatae!</p>
             <p>Odit neque libero illum expedita provident velit accusamus autem error hic quaerat soluta, similique cupiditate quasi recusandae minus! Accusamus officiis sapiente veniam itaque rerum repellat eaque quaerat non dicta deleniti?</p>
         </div>
@@ -55,39 +55,38 @@
 
     <!-- needs parent for grid format, with SIX columns (link to services) -->
     <div class="wrapper">
-        <h2></h2>
+        <h2>Our Services</h2>
         <div class="services" id="services">
             <div class="svc1">
-                <img src="" alt="">
-                <h3></h3>
+                <img src="images/digital.jpg" alt="iphone held in front of laptop">
+                <h3>Digital Transformation</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis aspernatur asperiores, nulla numquam minus cupiditate, culpa exercitationem assumenda officia cum eveniet sapiente. Veniam et qui iure quod repellendus porro iste.</p>
-                <div class="svcbttn svcbttn1"> <a href=""></a> </div>
+                <div class="svcbttn svcbttn1"> <a href="placeholder">Digital Plans <i class="fa-sharp fa-solid fa-play"></i></a> </div>
             </div>
             <div class="svc2">
-                <img src="" alt="">
-                <h3></h3>
+                <img src="images/marketing.jpg" alt="laptop displaying marketing analytics">
+                <h3>Marketing</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis aspernatur asperiores, nulla numquam minus cupiditate, culpa exercitationem assumenda officia cum eveniet sapiente. Veniam et qui iure quod repellendus porro iste.</p>
-                <div class="svcbttn svcbttn2"> <a href=""></a> </div>
+                <div class="svcbttn svcbttn2"> <a href="#placeholder">Marketing Plans <i class="fa-sharp fa-solid fa-play"></i></a> </div>
             </div>
             <div class="svc3">
-                <img src="" alt="">
-                <h3></h3>
+                <img src="images/video.jpg" alt="iphone displaying youtube logo">
+                <h3>Video Production</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis aspernatur asperiores, nulla numquam minus cupiditate, culpa exercitationem assumenda officia cum eveniet sapiente. Veniam et qui iure quod repellendus porro iste.</p>
-                <div class="svcbttn svcbttn3"> <a href=""></a> </div>
+                <div class="svcbttn svcbttn3"> <a href="#placeholder">Video Plans <i class="fa-sharp fa-solid fa-play"></i></a> </div>
             </div>
             <div class="svc4">
-                <img src="" alt="">
-                <h3></h3>
+                <img src="images/web.jpg" alt="iphone displaying instagram">
+                <h3>Web Development</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis aspernatur asperiores, nulla numquam minus cupiditate, culpa exercitationem assumenda officia cum eveniet sapiente. Veniam et qui iure quod repellendus porro iste.</p>
-                <div class="svcbttn svcbttn4"> <a href=""></a> </div>
+                <div class="svcbttn svcbttn4"> <a href="#placeholder">Web Plans <i class="fa-sharp fa-solid fa-play"></i></a> </div>
             </div>
             <div class="svc5">
-                <img src="" alt="">
-                <h3></h3>
+                <img src="images/print.jpg" alt="street with newspaper dispensers lined up">
+                <h3>Print</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis aspernatur asperiores, nulla numquam minus cupiditate, culpa exercitationem assumenda officia cum eveniet sapiente. Veniam et qui iure quod repellendus porro iste.</p>
-                <div class="svcbttn svcbttn5"> <a href=""></a> </div>
+                <div class="svcbttn svcbttn5"> <a href="#placeholder">Print Plans <i class="fa-sharp fa-solid fa-play"></i></a> </div>
             </div>
-            
         </div>
     </div>
 
