--- a/final-project/index.html
+++ b/final-project/index.html
@@ -92,54 +92,63 @@
 
     <!-- russian nesting divs take two -->
     <div class="vision">
+        <img src="images/vision.jpg" alt="dramatically lit paper boats">
         <div class="wrapper">
-            <h3></h3>
+            <h3>Our Vision</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo odit amet reiciendis vitae accusantium. Similique, necessitatibus quibusdam quas modi dolore, id consequatur repellendus quo debitis et aperiam sapiente provident laboriosam!</p>
-            <div class="vsnbttn"> <a href=""></a> </div>
+            <div class="vsnbttn"> <a href="#placeholder">Learn More <i class="fa-sharp fa-solid fa-play"></i></a> </div>
         </div>
     </div>
 
     <!-- needs a parent for flex, and order the second image to the end (link to team) -->
     <div class="wrapper">
-        <h2></h2>
+        <h2>Our Team</h2>
         <div class="team" id="team">
-            <img src="" alt="" class="teamimg1">
-            <div class="teamdsc1"></div>
-            <img src="" alt="" class="teamimg2">
-            <div class="teamdsc2"></div>
+            <img src="images/john.jpg" alt="photo of John Doe" class="teamimg1">
+            <div class="teamdsc1">
+                <h3>John Doe</h3>
+                <h4>CEO and Co-owner</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deleniti voluptas voluptates eaque optio? Cumque ullam totam explicabo sed optio modi iste, temporibus, eligendi iure suscipit voluptatum repellendus. Inventore, alias!</p>
+            </div>
+            <img src="images/bob.jpg" alt="photo of Bob Rite" class="teamimg2">
+            <div class="teamdsc2">
+                <h3>Bob Rite</h3>
+                <h4>CFO and Co-owner</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia deleniti nisi rerum modi eligendi tempore, atque dicta non quisquam! Laborum ipsum, deserunt suscipit placeat a sapiente impedit. Veniam, distinctio labore?</p>
+            </div>
         </div>
 
         <!-- form, map, and hours of operation (changes position for desktop, maybe float?) (link to contact) -->
-        <h2></h2>
+        <h2>Contact Us</h2>
         
         <div class="contact" id="contact">
             <div class="msg">
-                <h3></h3>
+                <h3>Send us a message</h3>
                 <form action=""></form>
             </div>
             <div class="location">
-                <h3></h3>
+                <h3>Location</h3>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.9447375322197!2d-75.7549368!3d45.349927799999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1680302176629!5m2!1sen!2sca" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="hours">
-                <h3></h3>
+                <h3>Hours of operation</h3>
                 <table>
                     <thead>
                         <tr>
-                            <th></th>
-                            <th></th>
+                            <th>Days</th>
+                            <th>Hours</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>Monday - Friday</td>
+                            <td>9 AM - 6 PM</td>
                         </tr>
                     </tbody>
                     <tbody>
                         <tr>
-                            <td></td>
-                            <td></td>
+                            <td>Saturday - Sunday</td>
+                            <td>Closed</td>
                         </tr>
                     </tbody>
                 </table>
