--- a/final-project/index.html
+++ b/final-project/index.html
@@ -124,7 +124,15 @@
         <div class="contact" id="contact">
             <div class="msg">
                 <h3>Send us a message</h3>
-                <form action=""></form>
+                <form action="placeholder.txt" method="post">
+                    <label for="fullname">Full Name</label>
+                    <input id="fullname" type="text" name="fullname">
+                    <label for="email">Email</label>
+                    <input id="email" type="email" name="email">
+                    <label for="msg">Message</label>
+                    <textarea name="msg" id="msg"></textarea>
+                    <button type="submit">send</button>
+                </form>
             </div>
             <div class="location">
                 <h3>Location</h3>
@@ -161,7 +169,10 @@
     <!-- footer needs unsplash link, and bleed effect -->
     <footer>
         <div class="wrapper">
-
+            <p>
+                &copy; Copyright Three Star Media, 2020 <br>
+                All images are taken from <a href="https://unsplash.com/" target="_blank">Unsplash</a>
+            </p>
         </div>
     </footer> 
 
