Adds a missing placeholder hashtag

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -61,7 +61,7 @@
                 <img src="images/digital.jpg" alt="iphone held in front of laptop">
                 <h3>Digital Transformation</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis aspernatur asperiores, nulla numquam minus cupiditate, culpa exercitationem assumenda officia cum eveniet sapiente. Veniam et qui iure quod repellendus porro iste.</p>
-                <div class="svcbttn svcbttn1"> <a href="placeholder">Digital Plans <i class="fa-sharp fa-solid fa-play"></i></a> </div>
+                <div class="svcbttn svcbttn1"> <a href="#placeholder">Digital Plans <i class="fa-sharp fa-solid fa-play"></i></a> </div>
             </div>
             <div class="svc2">
                 <img src="images/marketing.jpg" alt="laptop displaying marketing analytics">
@@ -158,7 +158,7 @@
                     </tbody>
                 </table>
             </div>
-            
+
             <div class="location">
                 <h3>Location</h3>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.9447375322197!2d-75.7549368!3d45.349927799999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1680302176629!5m2!1sen!2sca" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
