--- a/final-project/index.html
+++ b/final-project/index.html
@@ -7,6 +7,9 @@
     <title>final-project</title>
 
     <script src="https://kit.fontawesome.com/318ad1cad1.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="CSS/main.css">
 </head>
@@ -16,7 +19,7 @@
     <div class="wrapper">
 
         <!-- header with logo, nav, and search (mobile: vertical, desktop: horizontal) -->
-        <header >
+        <header>
             <img src="images/logo.png" alt="logo of three stars">
             <nav>
                 <a href="#home">Home</a>
