--- a/final-project/index.html
+++ b/final-project/index.html
@@ -16,41 +16,39 @@
 <body>
 
     <!-- forgot about the header bleed -->
+    <!-- header with logo, nav, and search (mobile: vertical, desktop: horizontal) -->
     <header>
         <div class="wrapper">
            <div class="wtfbox"><img src="images/logo.png" alt="logo of three stars"></div>
             <nav>
-                <div class="wtfbox"><a href="#home" class="homebox">Home</a></div>
+                <div class="wtfbox centerbox"><a href="#home" class="homebox">Home</a></div>
                 <a href="#about-us">About Us</a>
                 <a href="#services">Services</a>
                 <a href="#team">Team</a>
                 <a href="#contact">Contact</a>
             </nav>
-            <form action="placeholder.txt" method="get">
+            <form action="placeholder.txt" method="get" class="form1">
                 <label for="search"></label>
-                <input id="search" type="text" name="search" placeholder="search">
-                <button type="submit"><i class="fa-sharp fa-solid fa-magnifying-glass"></i></button>
+                <input id="search" type="text" name="search" placeholder="Search">
+                <button type="submit" class="searchbutton"><i class="fa-sharp fa-solid fa-magnifying-glass"></i></button>
             </form> 
         </div>
     </header>
 
-    <!-- main wrapper to center content -->
-    <div class="wrapper">
-
-        <!-- header with logo, nav, and search (mobile: vertical, desktop: horizontal) -->
-        
-
-        <!-- going to have to use a parent element for the photo and text on top -->
-        <div class="flt1" id="home">
-            <img src="images/main-banner.jpg" alt="photo of an office">
+    <!-- going to have to use a parent element for the photo and text on top -->
+    <!-- another forgotten bleed -->
+    <div class="flt1" id="home">
+            <img src="images/main-banner.jpg" alt="photo of an office" class="himg">
             <div class="fltbox">
-                <h1>Welcome to Three Star Media</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eligendi beatae sed cum, cupiditate veniam facere voluptate, nihil excepturi, mollitia magni aliquid distinctio tenetur temporibus amet! Necessitatibus facilis iure magnam!</p>
-                <div class="fltbttn"> <a href="#contact">Connect with us <i class="fa-sharp fa-solid fa-play"></i></a> </div>
+                <div class="wrapper">
+                   <h1>Welcome to Three Star Media</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eligendi beatae sed cum, cupiditate veniam facere voluptate, nihil excepturi, mollitia magni aliquid distinctio tenetur temporibus amet! Necessitatibus facilis iure magnam!</p>
+                    <div class="fltbttn"> <a href="#contact">Connect with us <i class="fa-sharp fa-solid fa-play"></i></a> </div> 
+                </div>
             </div>
-        </div>
     </div>
 
+    
     <!-- russian nesting divs for bleed effect on desktop (link to about) -->
     <div class="about" id="about-us">
         <div class="wrapper">
