adds about section

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -43,7 +43,7 @@
                 <div class="wrapper">
                    <h1>Welcome to Three Star Media</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eligendi beatae sed cum, cupiditate veniam facere voluptate, nihil excepturi, mollitia magni aliquid distinctio tenetur temporibus amet! Necessitatibus facilis iure magnam!</p>
-                    <div class="fltbttn"> <a href="#contact">Connect with us <i class="fa-sharp fa-solid fa-play"></i></a> </div> 
+                    <div class="fltbttn"> <a href="#contact">Connect with us&emsp;<i class="fa-sharp fa-solid fa-play"></i></a> </div> 
                 </div>
             </div>
     </div>
@@ -61,7 +61,7 @@
 
     <!-- needs parent for grid format, with SIX columns (link to services) -->
     <div class="wrapper">
-        <h2>Our Services</h2>
+        <h2 class="svch2">Our Services</h2>
         <div class="services" id="services">
             <div class="svc1">
                 <img src="images/digital.jpg" alt="iphone held in front of laptop">
