--- a/final-project/index.html
+++ b/final-project/index.html
@@ -63,31 +63,31 @@
     <div class="wrapper">
         <h2 class="svch2">Our Services</h2>
         <div class="services" id="services">
-            <div class="svc1">
+            <div class="svc1 svc">
                 <img src="images/digital.jpg" alt="iphone held in front of laptop">
                 <h3>Digital Transformation</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis aspernatur asperiores, nulla numquam minus cupiditate, culpa exercitationem assumenda officia cum eveniet sapiente. Veniam et qui iure quod repellendus porro iste.</p>
                 <div class="svcbttn svcbttn1"> <a href="#placeholder">Digital Plans <i class="fa-sharp fa-solid fa-play"></i></a> </div>
             </div>
-            <div class="svc2">
+            <div class="svc2 svc">
                 <img src="images/marketing.jpg" alt="laptop displaying marketing analytics">
                 <h3>Marketing</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis aspernatur asperiores, nulla numquam minus cupiditate, culpa exercitationem assumenda officia cum eveniet sapiente. Veniam et qui iure quod repellendus porro iste.</p>
                 <div class="svcbttn svcbttn2"> <a href="#placeholder">Marketing Plans <i class="fa-sharp fa-solid fa-play"></i></a> </div>
             </div>
-            <div class="svc3">
+            <div class="svc3 svc">
                 <img src="images/video.jpg" alt="iphone displaying youtube logo">
                 <h3>Video Production</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis aspernatur asperiores, nulla numquam minus cupiditate, culpa exercitationem assumenda officia cum eveniet sapiente. Veniam et qui iure quod repellendus porro iste.</p>
                 <div class="svcbttn svcbttn3"> <a href="#placeholder">Video Plans <i class="fa-sharp fa-solid fa-play"></i></a> </div>
             </div>
-            <div class="svc4">
+            <div class="svc4 svc">
                 <img src="images/web.jpg" alt="iphone displaying instagram">
                 <h3>Web Development</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis aspernatur asperiores, nulla numquam minus cupiditate, culpa exercitationem assumenda officia cum eveniet sapiente. Veniam et qui iure quod repellendus porro iste.</p>
                 <div class="svcbttn svcbttn4"> <a href="#placeholder">Web Plans <i class="fa-sharp fa-solid fa-play"></i></a> </div>
             </div>
-            <div class="svc5">
+            <div class="svc5 svc">
                 <img src="images/print.jpg" alt="street with newspaper dispensers lined up">
                 <h3>Print</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis aspernatur asperiores, nulla numquam minus cupiditate, culpa exercitationem assumenda officia cum eveniet sapiente. Veniam et qui iure quod repellendus porro iste.</p>
